Update NVN CAPSTONE AirBnbPrice Optimization.ipynb

--- a/NVN CAPSTONE AirBnbPrice Optimization.ipynb
+++ b/NVN CAPSTONE AirBnbPrice Optimization.ipynb
@@ -7,7 +7,7 @@
     "# Predicting Price of Airbnb Listings in NYC - Part 1\n",
     "\n",
     "\n",
-    " The listings were scrapped on July 8th 2019 and are specific to NYC, NY.\n",
+    " The listings were scrapped on July 8th, 2019 and are specific to NYC, NY.\n",
     "\n",
     "\n",
     "The objective of the analysis is to:\n",
@@ -16,9 +16,9 @@
     "- derive additional useful and interesting insights\n",
     "\n",
     "\n",
-    "Part 1 deals with taking the existing dataset, performing data cleaning, feature engineering and running preliminary analysis. The product of this part is a data file for Machnie Learning analysis.\n",
+    "Part 1 deals with taking the existing dataset, performing data cleaning, feature engineering, and running preliminary analysis. The product of this part is a data file for Machine Learning analysis.\n",
     "\n",
-    "Part 2 - The Machine Learning part of the project applies machine learning algorithms to predict price of lisings based on various input variables. "
+    "Part 2 - The Machine Learning part of the project applies machine learning algorithms to predict the price of listings based on various input variables. "
    ]
   },
   {
